Refactor: extract managers from GridLayout god object
Split the 1387-line GridLayout class into a coordinator (~526 lines)
plus three focused manager classes:

- BackgroundManager: background image lifecycle, template evaluation
- OverlayManager: overlay DOM, state-driven activation, tester panel
- SectionConfigManager: section CRUD, YAML editor modal

Also extracted static CSS to grid-styles.ts (~451 lines), added shared
constants.ts for CSS class names/IDs, removed 8 pass-through wrapper
methods, and added 56 new manager tests (215 total, up from 159).

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
+    "jsdom": "^28.1.0",
     "rollup": "^4.40.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.8.3",
